--- a/index.ejs
+++ b/index.ejs
@@ -11,7 +11,7 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <div class="header">
@@ -23,53 +23,6 @@
         <button type="submit" class="btn btn-primary">Team</button>
       </form>
     </div>
-    <!-- <div class="col-3 col-s-9 menu">
-        <div class="buttons">
-          <div class="create_game">
-            <button type="button" class="btn btn-primary" onclick="open1()">
-              Create Room
-            </button>
-            <div class="lobby" id="lobby">
-              <h2 id="room_code">Your room Code is:</h2>
-              <h3>Waiting for player to join...</h3>
-              <button type="button" onclick="close1()">close</button>
-            </div>
-            <div class="lobby" id="join">
-              <form action="/room">
-                <input
-                  type="text"
-                  name="room_code"
-                  placeholder="Enter Room Code"
-                  method="post"
-                />
-                <button
-                  type="submit"
-                  class="btn btn-primary"
-                  onclick="joinroom()"
-                >
-                  Join Room
-                </button>
-              </form>
-            </div>
-            <button type="button" class="btn btn-primary" onclick="opened2()">
-              Join Room
-            </button>
-          </div>
-        </div>
-        <div class="extra">
-          <a href="">Create an account</a>
-        </div>
-        <div>
-          <h1 class="test"></h1>
-        </div>
-      </div>
-      <div class="col-6 col-s-9">
-        <h3 style="text-align: center">Welcome to Drawize</h3>
-        <p style="text-align: center">
-          The place where we have fun and knowldge
-        </p>
-        <img src="./logo.jpg" alt="Artwist- Guess the Art" />
-      </div> -->
     <div class="background">
       <div class="col-s-9 col-9">
         <div
@@ -143,11 +96,11 @@
       <div class="col-3 col-s-12">
         <h3 style="text-align: center">Leaderboard</h3>
         <div class="aside">
-          <h2>Saketh</h2>
-          <h2>Krishna</h2>
-          <h2>Kusal</h2>
-          <h2>Chuchu</h2>
-          <h2>Vinay</h2>
+          <h2>Vinay 7</h2>
+          <h2>Saketh 6</h2>
+          <h2>Krishna FR</h2>
+          <h2>Kusal 69</h2>
+          <h2>Chuchu AP</h2>
         </div>
       </div>
     </div>
