--- a/game/game.ejs
+++ b/game/game.ejs
@@ -16,6 +16,7 @@
   <body>
     <h1>Your room no is <%= room_code %> Enjoy!!</h1>
     <div id="choose"></div>
+    <div id="timer"></div>
     <div id="drawarea">
       <canvas
         id="myCanvas"
