--- a/game/game.ejs
+++ b/game/game.ejs
@@ -11,11 +11,12 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Your room no is <%= room_code %> Enjoy!!</h1>
-    <div id="choose"></div>
     <div id="timer"></div>
+    <div id="choose"></div>
     <div id="drawarea">
       <canvas
         id="myCanvas"
