--- a/game/game.ejs
+++ b/game/game.ejs
@@ -4,37 +4,107 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Game</title>
+    <link rel="shortcut icon" href="./resources/logo.jpg" type="image/x-icon" />
+    <title>Artwist- Room No. <%= room_code %></title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./resources/game_styles.css" />
   </head>
   <body>
-    <h1>Your room no is <%= room_code %> Enjoy!!</h1>
-    <div id="timer"></div>
-    <div id="choose"></div>
+    <div class="header">
+      <!-- <button class="profile-btn">P</button> -->
+      <img src="./resources/img_avatar.png" alt="Avatar" id="profile-img" />
+      <h1
+        style="
+          text-align: center;
+          font-family: cursive;
+          background-color: 2px solid black;
+        "
+      >
+        Your room no is <%= room_code %> Enjoy!!
+      </h1>
+      <button class="btn btn-danger logout-btn">LogOut/Exit</button>
+    </div>
+    <div class="time_count">
+      <div
+        style="
+          text-align: center;
+          background-color: rgb(235, 190, 108);
+          border-top-left-radius: 10px;
+          border-top-right-radius: 10px;
+          border-bottom: 2px solid black;
+        "
+      >
+        Time Remaining
+      </div>
+      <div id="timer" style="text-align: center">30</div>
+    </div>
+    <div class="choose_box">
+      <div
+        style="
+          text-align: center;
+          background-color: rgb(235, 190, 108);
+          border-top-left-radius: 10px;
+          border-top-right-radius: 10px;
+          border-bottom: 2px solid black;
+        "
+      >
+        Artist now
+      </div>
+      <div id="choose" style="text-align: center">Saketh is drawing..</div>
+    </div>
+    <!-- Change width and height of canvas for working of canvas.. ask saketh https://stackoverflow.com/questions/33191909/can-i-specify-canvas-dimensions-using-vh-and-vw -->
     <div id="drawarea">
-      <canvas
-        id="myCanvas"
-        width="800"
-        height="500"
-        style="border: 1px solid #000000"
-      ></canvas>
-      <div class="col">
-        <ul class="list-group" id="players"></ul>
+      <div class="row">
+        <div class="col-8 col-s-8">
+          <canvas
+            id="myCanvas"
+            height="500px"
+            width="1000px"
+            style="border: 8px solid #000000"
+          ></canvas>
+          <div id="drawing_tools">
+            <!-- <button style="font-size: 100px;border-color: white;background-color: white;box-shadow: 0 0 white;" onclick="change_width(5)">.</button>
+            <button style="font-size: 700px;border-color: white;background-color: white;box-shadow: 0 0 white;" onclick="change_width(11)">.</button>
+            <button style="font-size: 1000px;border-color: white;background-color: white;box-shadow: 0 0 white;" onclick="change_width(20)">.</button> -->
+          </div>
+        </div>
+        <div id="chat_box" class="col-4 col-s-4">
+          <div
+            style="
+              text-align: center;
+              background-color: rgb(110, 173, 200);
+              border-top-left-radius: 10px;
+              border-top-right-radius: 10px;
+              border-bottom: 2px solid black;
+              font-size: 25px;
+              font-weight: bolder;
+              font-family: cursive;
+            "
+          >
+            Chat Box
+          </div>
+          <!-- <div class="col">
+            <ul class="list-group" id="players"></ul>
+          </div> -->
+          <div
+            style="
+              display: flex;
+              flex-direction: column;
+              justify-content: space-between;
+            "
+          >
+            <div id="id">A</div>
+            <div id="guess" class="left">B</div>
+            <div id="guess" class="right">B</div>
+            <div id="guess_input">C</div>
+          </div>
+        </div>
       </div>
-      <div id="drawing_tools">
-        <!-- <button style="font-size: 100px;border-color: white;background-color: white;box-shadow: 0 0 white;" onclick="change_width(5)">.</button>
-        <button style="font-size: 700px;border-color: white;background-color: white;box-shadow: 0 0 white;" onclick="change_width(11)">.</button>
-        <button style="font-size: 1000px;border-color: white;background-color: white;box-shadow: 0 0 white;" onclick="change_width(20)">.</button> -->
-      </div>
-      <div id="guess_input"></div>
-      <div id="id"></div>
-      <div id="guess"></div>
     </div>
   </body>
   <script
