--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ html {
     padding: 5px;
     display: flex;
     justify-content:space-between;
+    align-items: center;
  }
  .row:after {
     content: "";
@@ -67,10 +68,6 @@ html {
     .col-10 {width: 83.33%;}
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
-  }
-  
-  html {
-    font-family: "Lucida Sans", sans-serif;
   }
   
   
