--- a/game/game.ejs
+++ b/game/game.ejs
@@ -16,8 +16,10 @@
   </head>
   <body>
     <div class="header">
-      <!-- <button class="profile-btn">P</button> -->
-      <img src="./resources/img_avatar.png" alt="Avatar" id="profile-img" />
+      <button class="profile-btn">
+        P
+        <img src="./resources/img_avatar.png" alt="Avatar" id="profile-img" />
+      </button>
       <h1
         style="
           text-align: center;
@@ -29,79 +31,130 @@
       </h1>
       <button class="btn btn-danger logout-btn">LogOut/Exit</button>
     </div>
-    <div class="time_count">
+    <div id="lobby">
       <div
-        style="
-          text-align: center;
-          background-color: rgb(235, 190, 108);
-          border-top-left-radius: 10px;
-          border-top-right-radius: 10px;
-          border-bottom: 2px solid black;
-        "
+        class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5"
+        id="players"
       >
-        Time Remaining
-      </div>
-      <div id="timer" style="text-align: center">30</div>
-    </div>
-    <div class="choose_box">
-      <div
-        style="
-          text-align: center;
-          background-color: rgb(235, 190, 108);
-          border-top-left-radius: 10px;
-          border-top-right-radius: 10px;
-          border-bottom: 2px solid black;
-        "
-      >
-        Artist now
-      </div>
-      <div id="choose" style="text-align: center">Saketh is drawing..</div>
-    </div>
-    <!-- Change width and height of canvas for working of canvas.. ask saketh https://stackoverflow.com/questions/33191909/can-i-specify-canvas-dimensions-using-vh-and-vw -->
-    <div id="drawarea">
-      <div class="row">
-        <div class="col-8 col-s-8">
-          <canvas
-            id="myCanvas"
-            height="500px"
-            width="1000px"
-            style="border: 8px solid #000000"
-          ></canvas>
-          <div id="drawing_tools">
-            <!-- <button style="font-size: 100px;border-color: white;background-color: white;box-shadow: 0 0 white;" onclick="change_width(5)">.</button>
-            <button style="font-size: 700px;border-color: white;background-color: white;box-shadow: 0 0 white;" onclick="change_width(11)">.</button>
-            <button style="font-size: 1000px;border-color: white;background-color: white;box-shadow: 0 0 white;" onclick="change_width(20)">.</button> -->
+        <div
+          class="col d-flex align-items-start"
+          style="background-color: grey"
+        >
+          <div>
+            👤
+            <h3 class="fw-bold mb-0 fs-4">Player 1</h3>
           </div>
         </div>
-        <div id="chat_box" class="col-4 col-s-4">
-          <div
-            style="
-              text-align: center;
-              background-color: rgb(110, 173, 200);
-              border-top-left-radius: 10px;
-              border-top-right-radius: 10px;
-              border-bottom: 2px solid black;
-              font-size: 25px;
-              font-weight: bolder;
-              font-family: cursive;
-            "
-          >
-            Chat Box
+        <div class="col d-flex align-items-start">
+          <div>
+            👤
+            <h3 class="fw-bold mb-0 fs-4">Player 2</h3>
           </div>
-          <!-- <div class="col">
+        </div>
+        <div class="col d-flex align-items-start">
+          <div>
+            👤
+            <h3 class="fw-bold mb-0 fs-4">Player 3</h3>
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <div>
+            👤
+            <h3 class="fw-bold mb-0 fs-4">Player 4</h3>
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <div>
+            👤
+            <h3 class="fw-bold mb-0 fs-4">Player 5</h3>
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <div>
+            👤
+            <h3 class="fw-bold mb-0 fs-4">Player 6</h3>
+          </div>
+        </div>
+      </div>
+      <% if(starter==='true'){ %>
+      <button onclick="start_game()">Start Game</button>
+      <% } %>
+    </div>
+    <div id="game" style="display: none">
+      <div class="time_count">
+        <div
+          style="
+            text-align: center;
+            background-color: rgb(235, 190, 108);
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            border-bottom: 2px solid black;
+          "
+        >
+          Time Remaining
+        </div>
+        <div id="timer" style="text-align: center">30</div>
+      </div>
+      <div class="choose_box">
+        <div
+          style="
+            text-align: center;
+            background-color: rgb(235, 190, 108);
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+            border-bottom: 2px solid black;
+          "
+        >
+          Artist now
+        </div>
+        <div id="choose" style="text-align: center">Saketh is drawing..</div>
+      </div>
+      <!-- Change width and height of canvas for working of canvas.. ask saketh https://stackoverflow.com/questions/33191909/can-i-specify-canvas-dimensions-using-vh-and-vw -->
+      <div id="drawarea">
+        <div class="row">
+          <div class="col-8 col-s-8">
+            <canvas
+              id="myCanvas"
+              height="500px"
+              width="1000px"
+              style="border: 8px solid #000000"
+            ></canvas>
+            <div id="drawing_tools">
+              <!-- <button style="font-size: 100px;border-color: white;background-color: white;box-shadow: 0 0 white;" onclick="change_width(5)">.</button>
+              <button style="font-size: 700px;border-color: white;background-color: white;box-shadow: 0 0 white;" onclick="change_width(11)">.</button>
+            <button style="font-size: 1000px;border-color: white;background-color: white;box-shadow: 0 0 white;" onclick="change_width(20)">.</button> -->
+            </div>
+          </div>
+          <div id="chat_box" class="col-4 col-s-4">
+            <div
+              style="
+                text-align: center;
+                background-color: rgb(110, 173, 200);
+                border-top-left-radius: 10px;
+                border-top-right-radius: 10px;
+                border-bottom: 2px solid black;
+                font-size: 25px;
+                font-weight: bolder;
+                font-family: cursive;
+              "
+            >
+              Chat Box
+            </div>
+            <!-- <div class="col">
             <ul class="list-group" id="players"></ul>
           </div> -->
-          <div
-            style="
-              display: flex;
-              flex-direction: column;
-              justify-content: space-between;
-            "
-          >
-            <div id="id">A</div>
-            <div id="guess" class="left">B</div>
-            <div id="guess" class="right">B</div>
-            <div id="guess_input">C</div>
+            <div
+              style="
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+              "
+            >
+              <div id="id">A</div>
+              <div id="guess" class="left">B</div>
+              <div id="guess" class="right">B</div>
+              <div id="guess_input">C</div>
+            </div>
           </div>
         </div>
       </div>
