--- a/index.ejs
+++ b/index.ejs
@@ -23,86 +23,129 @@
         <button type="submit" class="btn btn-primary">Login</button>
       </form>
     </div>
-    <div class="background">
-      <div class="col-s-9 col-9">
+    <div class="col-s-9 col-9 background">
+      <div
+        class="row"
+        style="height: 60vh; width: fit-content; display: block; margin: auto"
+      >
+        <img
+          src="./logo.jpg"
+          alt="Artwist- Guess the Art"
+          style="display: block; margin: auto; height: 77%"
+        />
+      </div>
+      <div class="row">
         <div
-          class="row"
-          style="height: 60vh; width: fit-content; display: block; margin: auto"
+          class="buttons"
+          style="
+            display: flex;
+            flex-wrap: nowrap;
+            justify-content: center;
+            margin-bottom: 10px;
+            margin-top: -40px;
+          "
         >
-          <img
-            src="./logo.jpg"
-            alt="Artwist- Guess the Art"
-            style="display: block; margin: auto; height: 77%"
-          />
-        </div>
-        <div class="row">
-          <div
-            class="buttons"
-            style="
-              display: flex;
-              flex-wrap: nowrap;
-              justify-content: center;
-              margin-bottom: 10px;
-              margin-top: -40px;
-            "
-          >
-            <form action="/create_room" method="post">
-              <button
-                type="submit"
-                class="btn btn-primary"
-                style="margin-left: 30px; margin-right: 15px"
-              >
-                Create Room
-              </button>
+          <form action="/create_room" method="post">
+            <button
+              type="submit"
+              class="btn btn-primary"
+              style="margin-left: 30px; margin-right: 15px"
+            >
+              Create Room
+            </button>
+          </form>
+          <div class="lobby" id="lobby">
+            <h2 id="room_code">Your room Code is:</h2>
+            <h3>Waiting for player to join...</h3>
+            <button type="button" onclick="close1()">close</button>
+          </div>
+          <div class="lobby" id="join">
+            <form action="/join" method="post">
+              <input
+                type="text"
+                name="room_code"
+                placeholder="Enter Room Code"
+                id="code"
+              />
+              <button type="submit" class="btn btn-primary">Join Room</button>
             </form>
-            <div class="lobby" id="lobby">
-              <h2 id="room_code">Your room Code is:</h2>
-              <h3>Waiting for player to join...</h3>
-              <button type="button" onclick="close1()">close</button>
-            </div>
-            <div class="lobby" id="join">
-              <form action="/join" method="post">
-                <input
-                  type="text"
-                  name="room_code"
-                  placeholder="Enter Room Code"
-                  id="code"
-                />
-                <button type="submit" class="btn btn-primary">Join Room</button>
-              </form>
-            </div>
-            <button
-              type="button"
-              class="btn btn-primary"
-              onclick="opened2()"
-              style="margin-left: 15px; margin-right: 30px"
-            >
-              Join Room
-            </button>
           </div>
-          <div
-            style="display: flex; flex-wrap: nowrap; justify-content: center"
+          <button
+            type="button"
+            class="btn btn-primary"
+            onclick="opened2()"
+            style="margin-left: 15px; margin-right: 30px"
           >
-            <button
-              type="button"
-              class="btn btn-primary"
-              onclick="signin()"
-              style="width: auto"
-            >
-              Create an Account
-            </button>
-          </div>
+            Join Room
+          </button>
+        </div>
+        <div style="display: flex; flex-wrap: nowrap; justify-content: center">
+          <button
+            type="button"
+            class="btn btn-primary"
+            onclick="signin()"
+            style="width: auto"
+          >
+            Create an Account
+          </button>
         </div>
       </div>
-      <div class="col-3 col-s-12">
-        <h3 style="text-align: center">Leaderboard</h3>
-        <div class="aside">
-          <h2>Vinay 7</h2>
-          <h2>Saketh 6</h2>
-          <h2>Krishna FR</h2>
-          <h2>Kusal 69</h2>
-          <h2>Chuchu AP</h2>
-        </div>
+    </div>
+    <div class="col-3 col-s-12 background_leaderboard">
+      <h3 style="text-align: center; height: 4vh">Leaderboard</h3>
+      <!-- <ul id="leaderboard"> -->
+      <!-- We need to create a leaderboard which shows score and profile photo and user name.. that will be done in backend but styling and ids i will decide -->
+      <div class="list-group">
+        <ul id="leaderboard">
+          <a href="#" class="list-group-item list-group-item-action"
+            >A second link item</a
+          >
+          <a href="#" class="list-group-item list-group-item-action"
+            >A third link item</a
+          >
+          <a href="#" class="list-group-item list-group-item-action"
+            >A fourth link item</a
+          >
+          <a href="#" class="list-group-item list-group-item-action"
+            >A fourth link item</a
+          >
+          <a href="#" class="list-group-item list-group-item-action"
+            >A fourth link item</a
+          >
+          <a href="#" class="list-group-item list-group-item-action"
+            >A fourth link item</a
+          >
+          <a href="#" class="list-group-item list-group-item-action"
+            >A fourth link item</a
+          >
+          <a href="#" class="list-group-item list-group-item-action"
+            >A fourth link item</a
+          >
+          <a href="#" class="list-group-item list-group-item-action"
+            >A fourth link item</a
+          >
+          <a href="#" class="list-group-item list-group-item-action"
+            >A fourth link item</a
+          >
+          <a href="#" class="list-group-item list-group-item-action"
+            >A fourth link item</a
+          >
+          <a href="#" class="list-group-item list-group-item-action"
+            >A fourth link item</a
+          >
+          <a href="#" class="list-group-item list-group-item-action"
+            >A fourth link item</a
+          >
+          <a href="#" class="list-group-item list-group-item-action"
+            >A fourth link item</a
+          >
+          <a href="#" class="list-group-item list-group-item-action"
+            >A fourth link item</a
+          >
+          <a href="#" class="list-group-item list-group-item-action"
+            >A fourth link item</a
+          >
+        </ul>
       </div>
     </div>
   </body>
