--- a/styles.css
+++ b/styles.css
@@ -21,12 +21,13 @@ html {
     font-family: "Lucida Sans", sans-serif;
 }
 .header {
-    background-color: #9933cc;
-    color: #ffffff;
+    background-image: linear-gradient(to right, purple,white, purple);
+    color: black;
     padding: 5px;
     display: flex;
     justify-content:space-between;
     align-items: center;
+    height: 10vh;
  }
  .row:after {
     content: "";
@@ -89,19 +90,41 @@ html {
     color: #ffffff;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   }
-  .aside {
-    background-color: #33b5e5;
-    padding: 15px;
-    color: #ffffff;
-    text-align: center;
-    font-size: 14px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
+  /* Background is not responsive.. check!! */
+  .background{
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+    /* height: 90vh;
+    width: 100%;
+    background: url(./background.jpg) no-repeat center center;
+    background-size: cover; */
+    /* background-color: rgb(244, 247, 195); */
+    background-image: linear-gradient(white,rgb(244, 247, 195), white);
+    height: 90vh;
+  }
+  .background_leaderboard{
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+    /* height: 90vh;
+    width: 100%;
+    background: url(./background.jpg) no-repeat center center;
+    background-size: cover; */
+    background-image: linear-gradient(white,rgb(244, 247, 195), white);
+    height: 90vh;
+    border: 2px solid black;
+    border-radius: 10px;
   }
 
-  .background{
-    background-image: url(./background.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    position: relative;
+  #leaderboard{
+    height: 77vh;
+    overflow: hidden;
+    overflow-y: scroll;
+    padding: 0px;
+  }
+
+  #leaderboard::-webkit-scrollbar{
+    display: none;
   }
