--- a/Profile/user.ejs
+++ b/Profile/user.ejs
@@ -24,7 +24,7 @@
                     </nav>
                 </div> -->
                 <div class="header">
-                    <form action="/account">
+                    <form action="/">
                       <button type="submit" class="btn btn-primary">Home</button>
                     </form>
                     <h1 class="title">Drawize</h1>
