--- a/index.ejs
+++ b/index.ejs
@@ -12,13 +12,22 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple"
+    />
+    <style>
+      .title {
+        font-family: "Sofia", sans-serif;
+      }
+    </style>
   </head>
   <body>
     <div class="header">
       <form action="/account">
         <button type="submit" class="btn btn-primary">Account</button>
       </form>
-      <h1>Drawize</h1>
+      <h1 class="title">Drawize</h1>
       <form action="/login">
         <button type="submit" class="btn btn-primary">Login</button>
       </form>
