--- a/game/resources/game_styles.css
+++ b/game/resources/game_styles.css
@@ -1,3 +1,7 @@
+body{
+  background-image: linear-gradient(white, rgb(224, 224, 88), white);
+}
+
 .lobby{
     position:absolute;
     top:0;
@@ -19,9 +23,6 @@
 
 .header{
     background-image: linear-gradient(to right, purple, white, purple);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     border: 3px solid black;
 }
 
@@ -38,7 +39,6 @@
     object-fit: cover;
     margin-left: 3px;
     border: 2px solid black;
-    background-color: white;
 }
 
 .time_count{
@@ -63,6 +63,7 @@
     /* border: 8px soild black; */
     border-radius: 20px;
     margin-left: 10px;
+    background-color: white;
     /* width: 100%; */
     /* height: 69vh; */
 }
@@ -113,17 +114,21 @@
     border: 2px solid black;
     border-radius: 10px;
     padding: 0px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     background-image: linear-gradient(to right,white ,rgb(83, 184, 187), white);
+    height: 30vw;
+    overflow: scroll;
+    
   }
-
+  #chat_box::-webkit-scrollbar{
+    display: none;
+  }
   #guess{
     border: 2px solid black;
     border-radius: 20px;
     background-color: rgb(83, 184, 187);
     width: 25%;
+    padding: 5px;
+    margin: 2px 2px;
   }
 
   .left{
@@ -134,4 +139,74 @@
     float: right;
     clear: both;
     font-size: bolder;
+}
+
+.self_player{
+  padding: 10px;
+  margin: 20px;
+  border: 2px solid purple;
+  background-color: greenyellow;
+  border-radius: 10px;
+  justify-content: space-between;
+}
+.other_player{
+  padding: 10px;
+  margin: 20px;
+  border: 2px solid purple;
+  background-color: wheat;
+  border-radius: 10px;
+  justify-content: space-between;
+}
+
+#drawing_tools{
+  background-color: cornsilk;
+  border: 2px solid black;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#guess_input{
+  display: flex;
+  justify-content: space-between;
+}
+
+.choice_btn{
+  border-radius: 20px;
+  background-color: blue;
+  color:white;
+  font-family: cursive;
+  height: 30px;
+  margin: 3px 0px;
+}
+
+#leaderboard{
+  height: 77vh;
+  overflow: hidden;
+  overflow-y: scroll;
+  padding: 0px;
+}
+
+#leaderboard::-webkit-scrollbar{
+  display: none;
+}
+
+.profile{
+  background-color: purple;
+  height: 40px;
+  width: 40px;
+  border: 2px solid black;
+  border-radius: 50%;
+  background: url(./Profile/resources/modi.png);
+  background-size: cover;
+}
+
+.background_leaderboard{
+  background-image: linear-gradient(white,rgb(244, 247, 195), white);
+  height: 30vw;
+  border: 2px solid black;
+  border-radius: 10px;
+  /* margin-left: 3pxs; */
 }
