--- a/index.ejs
+++ b/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./logo.jpg" type="image/x-icon" />
     <title>Artwist- Guess the Art</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -23,139 +24,157 @@
     </style>
   </head>
   <body>
-    <div class="header">
-      <form action="/account">
-        <button type="submit" class="btn btn-primary">Account</button>
-      </form>
-      <h1 class="title">Drawize</h1>
-      <form action="/login">
-        <button type="submit" class="btn btn-primary">Login</button>
-      </form>
-    </div>
-    <div class="col-s-9 col-9 background">
-      <div
-        class="row"
-        style="height: 60vh; width: fit-content; display: block; margin: auto"
-      >
-        <img
-          src="./logo.jpg"
-          alt="Artwist- Guess the Art"
-          style="display: block; margin: auto; height: 77%"
-        />
+    <div class="" id="trail">
+      <div class="header">
+        <form action="/account">
+          <button type="submit" class="profile"></button>
+        </form>
+        <h1 class="title">Drawize</h1>
+        <form action="/login">
+          <button type="submit" class="btn btn-primary">Login</button>
+        </form>
       </div>
-      <div class="row">
+      <div class="col-s-9 col-9 background">
         <div
-          class="buttons"
-          style="
-            display: flex;
-            flex-wrap: nowrap;
-            justify-content: center;
-            margin-bottom: 10px;
-            margin-top: -40px;
-          "
+          class="row"
+          style="height: 60vh; width: fit-content; display: block; margin: auto"
         >
-          <form action="/create_room" method="post">
-            <button
-              type="submit"
-              class="btn btn-primary"
-              style="margin-left: 30px; margin-right: 15px"
-            >
-              Create Room
-            </button>
-          </form>
-          <div class="lobby" id="lobby">
-            <h2 id="room_code">Your room Code is:</h2>
-            <h3>Waiting for player to join...</h3>
-            <button type="button" onclick="close1()">close</button>
-          </div>
-          <div class="lobby" id="join">
-            <form action="/join" method="post">
-              <input
-                type="text"
-                name="room_code"
-                placeholder="Enter Room Code"
-                id="code"
-              />
-              <button type="submit" class="btn btn-primary">Join Room</button>
-            </form>
-          </div>
-          <button
-            type="button"
-            class="btn btn-primary"
-            onclick="opened2()"
-            style="margin-left: 15px; margin-right: 30px"
-          >
-            Join Room
-          </button>
+          <img
+            src="./logo-removebg.png"
+            alt="Artwist- Guess the Art"
+            style="display: block; margin: auto; height: 100%"
+          />
         </div>
-        <div style="display: flex; flex-wrap: nowrap; justify-content: center">
-          <button
-            type="button"
-            class="btn btn-primary"
-            onclick="signin()"
-            style="width: auto"
+        <div class="row">
+          <div
+            class="buttons"
+            style="
+              display: flex;
+              flex-wrap: nowrap;
+              justify-content: center;
+              margin-bottom: 10px;
+              margin-top: -40px;
+            "
           >
-            Create an Account
-          </button>
+            <form action="/create_room" method="post">
+              <button
+                type="submit"
+                class="btn btn-primary"
+                style="margin-left: 30px; margin-right: 15px"
+              >
+                Create Room
+              </button>
+            </form>
+            <button
+              type="button"
+              class="btn btn-primary"
+              onclick="opened2()"
+              style="margin-left: 15px; margin-right: 30px"
+            >
+              Join Room
+            </button>
+          </div>
+          <div
+            style="display: flex; flex-wrap: nowrap; justify-content: center"
+          >
+            <button
+              type="button"
+              class="btn btn-primary"
+              onclick="signin()"
+              style="width: auto"
+            >
+              Create an Account
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="col-3 col-s-12 background_leaderboard">
+        <h3 style="text-align: center; height: 4vh">Leaderboard</h3>
+        <!-- <ul id="leaderboard"> -->
+        <!-- We need to create a leaderboard which shows score and profile photo and user name.. that will be done in backend but styling and ids i will decide -->
+        <div class="list-group">
+          <ul id="leaderboard">
+            <a
+              href="#"
+              class="list-group-item list-group-item-action"
+              style="
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+              "
+            >
+              <img
+                src="./Profile/resources/modi.png"
+                alt="modi ki jai"
+                class="profile"
+              />
+              <p>Modi</p>
+              <p>9000 pts</p>
+            </a>
+            <a
+              href="#"
+              class="leaderboard_player list-group-item list-group-item-action"
+              >A third link item</a
+            >
+            <a href="#" class="list-group-item list-group-item-action"
+              >A fourth link item</a
+            >
+            <a href="#" class="list-group-item list-group-item-action"
+              >A fourth link item</a
+            >
+            <a href="#" class="list-group-item list-group-item-action"
+              >A fourth link item</a
+            >
+            <a href="#" class="list-group-item list-group-item-action"
+              >A fourth link item</a
+            >
+            <a href="#" class="list-group-item list-group-item-action"
+              >A fourth link item</a
+            >
+            <a href="#" class="list-group-item list-group-item-action"
+              >A fourth link item</a
+            >
+            <a href="#" class="list-group-item list-group-item-action"
+              >A fourth link item</a
+            >
+            <a href="#" class="list-group-item list-group-item-action"
+              >A fourth link item</a
+            >
+            <a href="#" class="list-group-item list-group-item-action"
+              >A fourth link item</a
+            >
+            <a href="#" class="list-group-item list-group-item-action"
+              >A fourth link item</a
+            >
+            <a href="#" class="list-group-item list-group-item-action"
+              >A fourth link item</a
+            >
+            <a href="#" class="list-group-item list-group-item-action"
+              >A fourth link item</a
+            >
+            <a href="#" class="list-group-item list-group-item-action"
+              >A fourth link item</a
+            >
+            <a href="#" class="list-group-item list-group-item-action"
+              >A fourth link item</a
+            >
+          </ul>
         </div>
       </div>
     </div>
-    <div class="col-3 col-s-12 background_leaderboard">
-      <h3 style="text-align: center; height: 4vh">Leaderboard</h3>
-      <!-- <ul id="leaderboard"> -->
-      <!-- We need to create a leaderboard which shows score and profile photo and user name.. that will be done in backend but styling and ids i will decide -->
-      <div class="list-group">
-        <ul id="leaderboard">
-          <a href="#" class="list-group-item list-group-item-action"
-            >A second link item</a
-          >
-          <a href="#" class="list-group-item list-group-item-action"
-            >A third link item</a
-          >
-          <a href="#" class="list-group-item list-group-item-action"
-            >A fourth link item</a
-          >
-          <a href="#" class="list-group-item list-group-item-action"
-            >A fourth link item</a
-          >
-          <a href="#" class="list-group-item list-group-item-action"
-            >A fourth link item</a
-          >
-          <a href="#" class="list-group-item list-group-item-action"
-            >A fourth link item</a
-          >
-          <a href="#" class="list-group-item list-group-item-action"
-            >A fourth link item</a
-          >
-          <a href="#" class="list-group-item list-group-item-action"
-            >A fourth link item</a
-          >
-          <a href="#" class="list-group-item list-group-item-action"
-            >A fourth link item</a
-          >
-          <a href="#" class="list-group-item list-group-item-action"
-            >A fourth link item</a
-          >
-          <a href="#" class="list-group-item list-group-item-action"
-            >A fourth link item</a
-          >
-          <a href="#" class="list-group-item list-group-item-action"
-            >A fourth link item</a
-          >
-          <a href="#" class="list-group-item list-group-item-action"
-            >A fourth link item</a
-          >
-          <a href="#" class="list-group-item list-group-item-action"
-            >A fourth link item</a
-          >
-          <a href="#" class="list-group-item list-group-item-action"
-            >A fourth link item</a
-          >
-          <a href="#" class="list-group-item list-group-item-action"
-            >A fourth link item</a
-          >
-        </ul>
-      </div>
+    <div class="lobby" id="join">
+      <form action="/join" method="post">
+        <input
+          type="text"
+          name="room_code"
+          placeholder="Enter Room Code"
+          id="code"
+        />
+        <button type="submit" class="btn btn-primary">Join</button>
+        <button type="button" class="btn btn-danger" onclick="close1()">
+          Close
+        </button>
+      </form>
     </div>
   </body>
   <script
