--- a/Profile/user.ejs
+++ b/Profile/user.ejs
@@ -26,7 +26,7 @@
           <tbody>
             <tr>
               <td>Username</td>
-              <td id="username">Modi</td>
+              <td id="username"><%= user %></td>
             </tr>
             <tr>
               <td>Email</td>
