--- a/game/game.ejs
+++ b/game/game.ejs
@@ -120,7 +120,8 @@
   <script>
     const socket = io();
     let room_code = "<%-room_code%>";
-    socket.emit("room_code", room_code);
+    let user = "<%-user%>";
+    socket.emit("room_code", { room_code: room_code, user: user });
   </script>
   <script src="./game.js"></script>
 </html>
