--- a/index.ejs
+++ b/index.ejs
@@ -26,7 +26,7 @@
   <body>
     <div class="" id="trail">
       <div class="header">
-        <form action="/account">
+        <form action="/account?user=<%= user %>" method="post">
           <button type="submit" class="profile"></button>
         </form>
         <h1 class="title">Drawize</h1>
@@ -34,6 +34,7 @@
           <button type="submit" class="btn btn-primary">Login</button>
         </form>
       </div>
+      <h1>Welcome back <%= user %></h1>
       <div class="col-s-9 col-9 background">
         <div
           class="row"
@@ -56,7 +57,7 @@
               margin-top: -40px;
             "
           >
-            <form action="/create_room" method="post">
+            <form action="/create_room?user=<%= user %>" method="post">
               <button
                 type="submit"
                 class="btn btn-primary"
