--- a/game/game.ejs
+++ b/game/game.ejs
@@ -33,6 +33,7 @@
         </button>
       </div>
       <% } %>
+      <div id="home"></div>
     </div>
     <div id="game" style="display: none">
       <div class="time_count">
@@ -47,7 +48,7 @@
         >
           Time Remaining
         </div>
-        <div id="timer" style="text-align: center">30</div>
+        <div id="timer" style="text-align: center">150</div>
       </div>
       <div class="choose_box">
         <div
