--- a/game/game.ejs
+++ b/game/game.ejs
@@ -7,6 +7,10 @@
     <link rel="shortcut icon" href="./resources/logo.jpg" type="image/x-icon" />
     <title>Artwist- Room No. <%= room_code %></title>
     <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
@@ -21,19 +25,21 @@
       </h1>
     </div>
     <div id="lobby">
-      <div
-        class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5"
-        id="players"
-      ></div>
-      <div class="col-3" id="final_scores"></div>
-      <% if(starter==='true'){ %>
-      <div id="buttons">
-        <button class="btn btn-success" onclick="start_game()" id="startgame">
-          Start Game
-        </button>
+      <div class="col-9 col-s-9">
+        <div
+          class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5"
+          id="players"
+        ></div>
+        <% if(starter==='true'){ %>
+        <div id="buttons">
+          <button class="btn btn-success" onclick="start_game()" id="startgame">
+            Start Game
+          </button>
+        </div>
+        <% } %>
+        <div id="home"></div>
       </div>
-      <% } %>
-      <div id="home"></div>
+      <div class="col-3 col-s-3" id="final_scores"></div>
     </div>
     <div id="game" style="display: none">
       <div class="time_count">
